# DBP-proyecto-final

./: .flake8  .gitignore  API.py  README.md  application.py  carrito.html  cart.css  cart.html  data.db  database.sql  database_init.py  global.css  index.html  login.css  login.html  products.py  pyproject.toml  register.html  style.css  user.py
static/: cart.css  form.js  global.css  login.css  product.css  searchbar.js  style.css  toggleMenu.js  user.css
templates/: cart.html  index.html  layout.html  login.html  new_product.html  product.html  register.html  user.html
